<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".IdentificationExampleActivity">

    <TextView
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/IdentificationActivity_textView_currentMagnitude"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/IdentificationExampleActivity_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/IdentificationActivity_textView_currentMagnitude"
        android:id="@+id/IdentificationActivity_textView_description" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/IdentificationActivity_textView_description"
        android:id="@+id/buttons_container_linear_layout">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/IdentificationExampleActivity_rectangle"
            android:id="@+id/IdentificationActivity_button_rectangle"
            android:layout_weight="1"
            android:onClick="storeMagnitude"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/IdentificationExampleActivity_circle"
            android:id="@+id/IdentificationActivity_button_circle"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="storeMagnitude"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/IdentificationExampleActivity_cylinder"
            android:id="@+id/IdentificationActivity_button_cylinder"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="storeMagnitude"/>

    </LinearLayout>

    <ImageView
        android:src="@drawable/guessing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/IdentificationActivity_imageView_guess"
        android:layout_below="@+id/buttons_container_linear_layout" />

</RelativeLayout>