<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".RapidChangesExampleActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="153.42 uT"
        android:id="@+id/RapidChangesExampleActivity_textView_magnitude"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/abc_text_size_large_material" />

    <TextView
        android:text="@string/RapidChangesExampleActivity_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RapidChangesExampleActivity_textView_description"
        android:layout_below="@+id/RapidChangesExampleActivity_textView_magnitude"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/RapidChangesExampleActivity_editText_highThreshold"
        android:layout_alignTop="@+id/RapidChangesExampleActivity_button_setHighThreshold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RapidChangesExampleActivity_setHighThreshold"
        android:id="@+id/RapidChangesExampleActivity_button_setHighThreshold"
        android:onClick="setThresholds"
        android:enabled="false"
        android:layout_below="@+id/RapidChangesExampleActivity_button_setLowThreshold"
        android:layout_alignLeft="@+id/RapidChangesExampleActivity_button_setLowThreshold"
        android:layout_alignStart="@+id/RapidChangesExampleActivity_button_setLowThreshold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/RapidChangesExampleActivity_editText_lowThreshold"
        android:layout_alignTop="@+id/RapidChangesExampleActivity_button_setLowThreshold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RapidChangesExampleActivity_setLowThreshold"
        android:id="@+id/RapidChangesExampleActivity_button_setLowThreshold"
        android:onClick="setThresholds"
        android:layout_below="@+id/RapidChangesExampleActivity_textView_description"
        android:layout_toLeftOf="@+id/RapidChangesExampleActivity_textView_tapCounter"
        android:layout_toStartOf="@+id/RapidChangesExampleActivity_textView_tapCounter"
        android:layout_marginTop="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RapidChangesExampleActivity_numberOfTaps"
        android:id="@+id/RapidChangesExampleActivity_textView_numberOfTaps_description"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:id="@+id/RapidChangesExampleActivity_textView_tapCounter"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RapidChangesExampleActivity_resetThreshold"
        android:id="@+id/RapidChangesExampleActivity_button_resetActivity"
        android:onClick="resetActivity"
        android:layout_below="@+id/RapidChangesExampleActivity_button_setHighThreshold"
        android:layout_alignRight="@+id/RapidChangesExampleActivity_button_setHighThreshold"
        android:layout_alignEnd="@+id/RapidChangesExampleActivity_button_setHighThreshold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
