<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="unipi.luk3s.magnetotest.CollectSensorDataActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CollectSensorDataActivity_textView_dataDisplay"
        android:text="(15.01, 31.47, -48.11) µT"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/CollectSensorDataActivity_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:id="@+id/CollectSensorDataActivity_textView_description"
        android:layout_below="@+id/CollectSensorDataActivity_textView_dataDisplay"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/CollectSensorDataActivity_numberPicker"
        android:descendantFocusability="blocksDescendants"
        android:layout_below="@+id/CollectSensorDataActivity_textView_description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/CollectSensorDataActivity_button_setNumberOfPoints" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CollectSensorDataActivity_setNumberOfPoints"
        android:id="@+id/CollectSensorDataActivity_button_setNumberOfPoints"
        android:onClick="setNumberOfPoints"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/CollectSensorDataActivity_button_recordPosition"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CollectSensorDataActivity_recordPosition"
        android:id="@+id/CollectSensorDataActivity_button_recordPosition"
        android:onClick="recordAPosition"
        android:enabled="false"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/CollectSensorDataActivity_button_saveToMemoryAsCsv"
        android:layout_toStartOf="@+id/CollectSensorDataActivity_button_saveToMemoryAsCsv" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CollectSensorDataActivity_saveToMemoryAsCsv"
        android:id="@+id/CollectSensorDataActivity_button_saveToMemoryAsCsv"
        android:onClick="storeAsCsv"
        android:enabled="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:id="@+id/CollectSensorDataActivity_listView_recordedPositions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_alignTop="@+id/CollectSensorDataActivity_numberPicker"
        android:layout_toRightOf="@+id/CollectSensorDataActivity_numberPicker"
        android:layout_toEndOf="@+id/CollectSensorDataActivity_numberPicker"
        android:layout_above="@+id/CollectSensorDataActivity_button_setNumberOfPoints" />

</RelativeLayout>