<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="unipi.luk3s.magnetotest.LinearMotionExampleActivity">

    <TextView
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LinearMotionExampleActivity_textView_currentMagnitude"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView android:text="@string/LinearMotionExampleActivity_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/LinearMotionExampleActivity_textView_currentMagnitude"
        android:id="@+id/LinearMotionExampleActivity_description"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LinearMotionExampleActivity_leftEnd"
        android:id="@+id/LinearMotionExampleActivity_button_leftEnd"
        android:onClick="storeMagnitude"
        android:layout_below="@+id/LinearMotionExampleActivity_description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LinearMotionExampleActivity_rightEnd"
        android:id="@+id/LinearMotionExampleActivity_button_rightEnd"
        android:onClick="storeMagnitude"
        android:enabled="false"
        android:layout_below="@+id/LinearMotionExampleActivity_description"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/LinearMotionExampleActivity_imageView_slidingImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LinearMotionExampleActivity_seekBar"
        android:layout_below="@+id/LinearMotionExampleActivity_button_leftEnd"
        android:src="@drawable/slider_image"
        android:background="#bfbbb1"
        android:scaleType="centerCrop"/>

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LinearMotionExampleActivity_seekBar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:max="100"/>

</RelativeLayout>
