<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RadialPositionExampleActivity">

    <TextView
        android:text="@string/RadialPositionExampleActivity_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RadialPositionExampleActivity_textView_description" />

    <unipi.luk3s.magnetotest.RedDotView
        android:id="@+id/RadialPositionExampleActivity_redDotView"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="-152.54°"
        android:id="@+id/RadialPositionExampleActivity_textView_azimuth"
        android:layout_alignTop="@+id/RadialPositionExampleActivity_textView_norm"
        android:layout_alignRight="@+id/RadialPositionExampleActivity_redDotView"
        android:layout_alignEnd="@+id/RadialPositionExampleActivity_redDotView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="-25.12"
        android:id="@+id/RadialPositionExampleActivity_textView_norm"
        android:layout_below="@+id/RadialPositionExampleActivity_textView_description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RadialPositionExampleActivity_setOverCompassValue"
        android:id="@+id/RadialPositionExampleActivity_button_setOverCompassValue"
        android:onClick="performInit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RadialPositionExampleActivity_setFarFromCompass"
        android:id="@+id/RadialPositionExampleActivity_button_setFarFromCompass"
        android:enabled="false"
        android:onClick="performInit"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/RadialPositionExampleActivity_redDotView"
        android:layout_alignEnd="@+id/RadialPositionExampleActivity_redDotView" />

</RelativeLayout>